@@ -20,20 +20,8 @@ class userActions extends sfActions {
 		$this->user = $this->getUser()->getGuardUser();
 		$this->melody = $this->getUser()->getMelody('eventbrite');
 
-/*
-		// TEST: check if user has main ticket
-		$apiTickets = $this->melody->getTicketsForUser($this->user->getEmailAddress());
-		$mainTickets = sfConfig::get('app_mainevent_tickets');
-
-		// check if we got the proper response
-		if(isset($apiTickets) and isset($apiTickets['user_tickets'])) {
-
-			// TODO: check how to iterate here!
-			var_dump($apiTickets['user_tickets'][1]);
-
-		}
-		die();
-*/
+		// update user's main ticket information
+		//if(!$this->user->getAttendee()->getHasMainTicket()) $this->user->getAttendee()->updateMainTicketForUser($this->getUser());
 
 		// Form for the organisers
 		$this->form = new OrganiserForm($this->user->getOrganiser());
